--- a/homepage.html
+++ b/homepage.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 
 <html>
-
+<title> 
+Melbourne Indie Films
+</title> 
 	<head>
 		<meta chaset="UTF-8">
 		 <link rel = "stylesheet" type="text/css" href="formatstyles.css"/>
 		 <link rel = "stylesheet" type="text/css" href="layoutstyles.css"/>
-		 <script type="text/javascript">
+		 <script type="text/css">
 </script>
 	</head>
 	<body>
@@ -22,12 +24,11 @@
   <li><a href="#contact">Contact Us</a></li>
   <li style="float:right"><a class="active" href="#login">Login/Register</a></li>
 </ul>
-	 </div>
- 	<div id = "leftmenu">
- 		<?php include("menu.php"); ?>
- 	</div>
+	 
 	 <div id = "content">
- 		<h2> Welcome To Melbourne Indie Films</h2>
+	 <h2> Welcome To Melbourne Indie Films</h2>
+	 <img src = "images/melbourne.jpg" alt = "Melbourne" style = "width: 1000px; height:1000px">
+ 		
  		
  	</div>
  	<div id ="footer">
