--- a/homepage.html
+++ b/homepage.html
@@ -6,13 +6,15 @@ Melbourne Indie Films
 </title> 
 	<head>
 		<meta chaset="UTF-8">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		 <link rel = "stylesheet" type="text/css" href="formatstyles.css"/>
 		 <link rel = "stylesheet" type="text/css" href="layoutstyles.css"/>
-		 <script type="text/css">
+		 <script type="text/javascript">
 </script>
+
 	</head>
 	<body>
-
+ 
 	
 <div id="wrapper">
 	 <div id = "header">
@@ -24,10 +26,12 @@ Melbourne Indie Films
   <li><a href="#contact">Contact Us</a></li>
   <li style="float:right"><a class="active" href="#login">Login/Register</a></li>
 </ul>
+
+                </div>
 	 
 	 <div id = "content">
 	 <h2> Welcome To Melbourne Indie Films</h2>
-	 <img src = "images/melbourne.jpg" alt = "Melbourne" style = "width: 1000px; height:1000px">
+	 <img src = "images/melbourne.jpg" alt = "Melbourne" style = "width: 1280x; height:720px">
  		
  		
  	</div>
