--- a/homepage.html
+++ b/homepage.html
@@ -20,11 +20,11 @@ Melbourne Indie Films
 	 <div id = "header">
  		<h1>Melbourne Indie Films</h1>
  			<ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#catalogue">Catalogue</a></li>
-  <li><a href="#about">About Us</a></li>
-  <li><a href="#contact">Contact Us</a></li>
-  <li style="float:right"><a class="active" href="#login">Login/Register</a></li>
+  <li><a class="active" href="homepage.html">Home</a></li>
+  <li><a href="catalogue.html">Catalogue</a></li>
+  <li><a href="about us.html">About Us</a></li>
+  <li><a href="contact us.html">Contact Us</a></li>
+  <li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
 </ul>
 
                 </div>
@@ -32,13 +32,14 @@ Melbourne Indie Films
 	 <div id = "content">
 	 <h2> Welcome To Melbourne Indie Films</h2>
 	 <img src = "images/melbourne.jpg" alt = "Melbourne" style = "width: 1280x; height:720px">
+	 <h6> Image Credit MartinaFotos, avaliable at Pixabay.com </h6>
  		
  		
  	</div>
  	<div id ="footer">
  	<ul>
- <li><a class="#facebook" href="#home">Facebook</a></li>
-  <li><a href="#insta">Instagram</a></li>
+ <li><a href="#facebook">Facebook</a></li>
+ <li><a href="#insta">Instagram</a></li>
   
   </ul>
  	</div>
