--- a/homepage.html
+++ b/homepage.html
@@ -17,8 +17,7 @@ Melbourne Indie Films
  
 	
 <div id="wrapper">
-	 <div id = "header">
- 		<h1>Melbourne Indie Films</h1>
+	 
  			<ul>
   <li><a class="active" href="homepage.html">Home</a></li>
   <li><a href="catalogue.html">Catalogue</a></li>
@@ -29,17 +28,19 @@ Melbourne Indie Films
 
                 </div>
 	 
-	 <div id = "content">
-	 <h2> Welcome To Melbourne Indie Films</h2>
-	 <img src = "images/melbourne.jpg" alt = "Melbourne" style = "width: 1280x; height:720px">
-	 <h6> Image Credit MartinaFotos, avaliable at Pixabay.com </h6>
- 		
+	 <div class = "image">
+	 <img src = "images/cinema.jpg" alt = "Melbourne" >
+	 <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span></h2>
+
+	 <figcaption style = "color:white">Free images avaliable at Pixabay </figcaption>
+	
  		
  	</div>
  	<div id ="footer">
  	<ul>
- <li><a href="#facebook">Facebook</a></li>
- <li><a href="#insta">Instagram</a></li>
+ <li><a href="http://www.facebook.com">Facebook</a></li>
+
+ <li><a href="http://www.instagram.com">Instagram</a></li>
   
   </ul>
  	</div>
