--- a/homepage.html
+++ b/homepage.html
@@ -6,9 +6,9 @@ Melbourne Indie Films
 </title> 
 	<head>
 		<meta chaset="UTF-8">
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		
 		 <link rel = "stylesheet" type="text/css" href="formatstyles.css"/>
-		 <link rel = "stylesheet" type="text/css" href="layoutstyles.css"/>
+		
 		 <script type="text/javascript">
 </script>
 
@@ -32,7 +32,7 @@ Melbourne Indie Films
 	 <img src = "images/cinema.jpg" alt = "Melbourne" >
 	 <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span></h2>
 
-	 <figcaption style = "color:white">Free images avaliable at Pixabay </figcaption>
+	 <figcaption style = "color:white;">Free images avaliable at Pixabay </figcaption>
 	
  		
  	</div>
