--- a/contact us.html
+++ b/contact us.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html>
@@ -6,9 +7,9 @@ Melbourne Indie Films
 </title> 
 	<head>
 		<meta chaset="UTF-8">
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		
 		 <link rel = "stylesheet" type="text/css" href="formatstyles.css"/>
-		 <link rel = "stylesheet" type="text/css" href="layoutstyles.css"/>
+		
 		 <script type="text/javascript">
 </script>
 
@@ -17,8 +18,7 @@ Melbourne Indie Films
  
 	
 <div id="wrapper">
-	 <div id = "header">
- 		<h1>Melbourne Indie Films</h1>
+	 
  			<ul>
   <li><a class="active" href="homepage.html">Home</a></li>
   <li><a href="catalogue.html">Catalogue</a></li>
@@ -29,3 +29,38 @@ Melbourne Indie Films
 
                 </div>
 	 
+	 <div class = "image">
+	 <img src = "images/cinema.jpg" alt = "Melbourne" >	
+ 	</div>
+	<<h2><span>Contact us:<span class = 'spacer'></span><br />
+
+<form class="cf">
+  <div 
+    <input type="text" id="input-name" placeholder="Name">
+    <input type="email" id="input-email" placeholder="Email address">
+    <input type="text" id="input-subject" placeholder="Subject">
+  </div>
+  <div class="half right cf">
+    <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
+  </div>  
+  <input type="submit" value="Submit" id="input-submit">
+</form>
+
+	
+	
+	
+	
+
+	
+ 	<div id ="footer">
+ 	<ul>
+ <li><a href="http://www.facebook.com">Facebook</a></li>
+
+ <li><a href="http://www.instagram.com">Instagram</a></li>
+  
+  </ul>
+ 	</div>
+</div>
+	</body>
+
+	</html>
