About us update

--- a/about us.html
+++ b/about us.html
@@ -36,6 +36,7 @@ Melbourne Indie Films
   <button class="left-button" onclick="plusDivs(-1)">&#10094;</button>
   <button class="righ-button" onclick="plusDivs(1)">&#10095;</button>
   <p><i> Looking for interesting things to do for the weekend ? </i></p>
+  <p> We are here to help you exploring indie films at extraordinary venues around you that you may not even be aware of ! </p>
 
 
 </div>
