added banner to catalogue and css

--- a/catalogue.html
+++ b/catalogue.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+	<div id="banner">
+		<img src="images/banner.jpg" alt="banner">
+	</div>
 	<div id="wrapper">
 		<ul>
 			<li><a class="active" href="homepage.html">Home</a></li>
