--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,9 @@ Melbourne Indie Films
 
 	</head>
 	<body>
- 	
+ 	<div id="banner">
+		<img src="images/banner.jpg" alt="banner">
+	</div>
 <div id="wrapper">
 	 
  			<ul>
