--- a/contact us.html
+++ b/contact us.html
@@ -15,6 +15,7 @@
 			<li><a href="catalogue.html">Catalogue</a></li>
 			<li><a href="about us.html">About Us</a></li>
 			<li><a href="contact us.html">Contact Us</a></li>
+			<li style ="float:right"><a href="cart.html"><img src = "images/shoppingcart.png" alt = "shopping cart logo" style = "width:15px;height:15px; float:right"></a></li>
 			<li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
 		</ul>
 	</div>
