--- a/contact us.html
+++ b/contact us.html
@@ -19,25 +19,24 @@
 			<li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
 		</ul>
 	</div>
-	<div class="catalogue_title">
+<div class="catalogue_title">
 		<h1>Contact us</h1>
 	</div>
 	<form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
 	<div class="row">
 		<label for="name">Your name:</label><br />
-		<input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+		<input id="name" class="input" name="name" type="text" value="Name" size="30" /><br />
 	</div>
 	<div class="row">
 		<label for="email">Your email:</label><br />
-		<input id="email" class="input" name="email" type="text" value="" size="30" /><br />
+		<input id="email" class="input" name="email" type="text" value="Email address" size="30" /><br />
 	</div>
 	<div class="row">
 		<label for="message">Your message:</label><br />
 		<textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
 	</div>
 	<input id="submit_button" type="submit" value="Send email" />
-</form>						
-	
+</form>				
 	<div id ="footer">
 		<ul>
 			<li><a href="http://www.facebook.com">Facebook</a></li>
