--- a/homepage.html
+++ b/homepage.html
@@ -31,7 +31,7 @@ Melbourne Indie Films
                 </div>
 	 
 	 <div class = "image">
-	 <img src = "images/cinema.jpg" alt = "Melbourne" >
+	 <img src = "images/cinema.jpg" alt = "Cinema" >
 	 <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span></h2>
 
 	 <figcaption style = "color:white;">Free images avaliable at Pixabay </figcaption>
