text colour change

--- a/about us.html
+++ b/about us.html
@@ -14,7 +14,7 @@ Melbourne Indie Films
 
 	</head>
 
-	<body text="white">
+	<body text="grey">
 	<div id="wrapper">
 	 <div id = "header">
  		<h1>Melbourne Indie Films</h1>
