--- a/about us.html
+++ b/about us.html
@@ -15,6 +15,9 @@ Melbourne Indie Films
 	</head>
 
 	<body text="grey">
+	<div id="banner">
+		<img src="images/banner.jpg" alt="banner">
+	</div>
 	<div id="wrapper">
 	 <div id = "header">
  		<h1>Melbourne Indie Films</h1>
