--- a/homepage.html
+++ b/homepage.html
@@ -29,11 +29,12 @@ Melbourne Indie Films
 </ul>
 
                 </div>
-	 
-	 <div class = "image">
-	 <img src = "images/cinema.jpg" alt = "Cinema" >
-	 <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span></h2>
 
+	<div class = "container">
+	 <img src = "images/cinema.jpg" alt = "Cinema" class = "image" style = "width:100%;height:100%" >
+	 <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span></h2>
+<div class = "middle">
+</div>
 	 <figcaption style = "color:white;">Free images avaliable at Pixabay </figcaption>
 	
  		
