--- a/homepage.html
+++ b/homepage.html
@@ -15,6 +15,10 @@ Melbourne Indie Films
 	</head>
 	<body>
  	
+ 	
+ 	<div id="banner">
+		<img src="images/banner.jpg" alt="banner">
+	</div>
 <div id="wrapper">
 	 
  			<ul>
@@ -28,6 +32,7 @@ Melbourne Indie Films
 
                 </div>
 
+
 	<div class = "container">
 	 <img src = "images/cinema.jpg" alt = "Cinema" class = "image" style = "width:100%;height:100%" >
 	 <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span></h2>
@@ -37,6 +42,18 @@ Melbourne Indie Films
 	
  		
  	</div>
+
+
+
+
+
+
+
+
+
+
+
+
  	<div id ="footer">
  	<ul>
  <li><a href="http://www.facebook.com">Facebook</a></li>
