--- a/homepage.html
+++ b/homepage.html
@@ -16,9 +16,7 @@ Melbourne Indie Films
 	<body>
  	
  	
- 	<div id="banner">
-		<img src="images/banner.jpg" alt="banner">
-	</div>
+ 	
 <div id="wrapper">
 	 
  			<ul>
@@ -32,27 +30,21 @@ Melbourne Indie Films
 
                 </div>
 
-
+<div id = "button">
 	<div class = "container">
-	 <img src = "images/cinema.jpg" alt = "Cinema" class = "image" style = "width:100%;height:100%" >
-	 <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span></h2>
+	 <img src = "images/cinema.jpg" alt = "Cinema" class = "image" style = "width:100%;height:100%" /><a href = "catalogue.html">Check Out Our Catalogue</a>
+
+	 <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span>
+	 </h2>
+	 </div>
+
+
 <div class = "middle">
 </div>
 	 <figcaption style = "color:white;">Free images avaliable at Pixabay </figcaption>
 	
  		
  	</div>
-
-
-
-
-
-
-
-
-
-
-
 
  	<div id ="footer">
  	<ul>
