--- a/login.html
+++ b/login.html
@@ -1,3 +1,54 @@
+<!DOCTYPE html>
+
 <HTML>
+	<title> 
+		Melbourne Indie Films
+	</title> 
+	<head>
+		<meta chaset="UTF-8">
+		
+		<link rel = "stylesheet" type="text/css" href="login-style.css"/>
+		<link rel = "stylesheet" type="text/css" href="formatstyles.css"/>
+		<link rel = "stylesheet" type="text/css" href="layoutstyles.css"/>
+		
+		<script src="login-script.js"></script>
+
+	</head>
+	<body>
+		<div class="temp" id="banner">
+			<img src="images/banner.jpg" alt="banner">
+		</div>
+		<div id="wrapper">
+			<div id = "header">
+				<ul>
+					<li><a class="active" href="homepage.html">Home</a></li>
+					<li><a href="catalogue.html">Catalogue</a></li>
+					<li><a href="about us.html">About Us</a></li>
+					<li><a href="contact us.html">Contact Us</a></li>
+					<li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
+				</ul>
+			</div>
+
+
+		<div class="login-page">
+			<div class="form">
+				<form class="register-form">
+					<input type="text" placeholder="name"/>
+					<input type="password" placeholder="password"/>
+					<input type="text" placeholder="email address"/>
+					<button>create</button>
+					<p class="message">Already registered? <a href="#">Sign In</a></p>
+				</form>
+				<form class="login-form">
+					<input type="text" placeholder="username"/>
+					<input type="password" placeholder="password"/>
+					<button>login</button>
+					<p class="message">Not registered? <a href="#">Create an account</a></p>
+				</form>
+			</div>
+		</div>
+	</body>
+
+
 
 </HTML>
