--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 		<script src="login-script.js"></script>
 
 	</head>
-	<body>
+	<body text="white">
 		<div class="temp" id="banner">
 			<img src="images/banner.jpg" alt="banner">
 		</div>
@@ -30,25 +30,30 @@
 			</div>
 
 
-		<div class="login-page">
-			<div class="form">
-				<form class="register-form">
-					<input type="text" placeholder="name"/>
-					<input type="password" placeholder="password"/>
-					<input type="text" placeholder="email address"/>
-					<button>create</button>
-					<p class="message">Already registered? <a href="#">Sign In</a></p>
-				</form>
-				<form class="login-form">
-					<input type="text" placeholder="username"/>
-					<input type="password" placeholder="password"/>
-					<button>login</button>
-					<p class="message">Not registered? <a href="#">Create an account</a></p>
-				</form>
+			<div class="login-page">
+				<div class="form">
+					<form class="register-form">
+						<h1> REGISTER </h1>
+						<input type="text" placeholder="name"/>
+						<input type="password" placeholder="password"/>
+						<input type="text" placeholder="email address"/>
+						<button>create</button>
+						<p class="message">Already registered? <a href="#">Sign In</a></p>
+					</form>
+				</div>
+
+				<div class="form">
+					<form class="login-form">
+						<h1> LOG IN </h1>
+						<input type="text" placeholder="username"/>
+						<input type="password" placeholder="password"/>
+						<button>login</button>
+						<p class="message">Not registered? <a href="#">Create an account</a></p>
+					</form>
+				</div>
 			</div>
-		</div>
-	</body>
+		</body>
 
-
+<!--Reference: 
 
 </HTML>
