--- a/test.html
+++ b/test.html
@@ -47,7 +47,26 @@ body, html {
 
 <div class="bg"></div>
 
-<p>This example creates a full page background image. Try to resize the browser window to see how it always will cover the full screen (when scrolled to top), and that it scales nicely on all screen sizes.</p>
+ <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span>
+	 </h2>
+	 </div>
 
+
+<div class = "middle">
+</div>
+	 <figcaption style = "color:white;">Free images avaliable at Pixabay </figcaption>
+	
+ 		
+ 	</div>
+
+ 	<div id ="footer">
+ 	<ul>
+ <li><a href="http://www.facebook.com">Facebook</a></li>
+
+ <li><a href="http://www.instagram.com">Instagram</a></li>
+  
+  </ul>
+ 	</div>
+</div>
 </body>
 </html>
