Fixed navigation bar

--- a/about us.html
+++ b/about us.html
@@ -7,8 +7,8 @@ Melbourne Indie Films
 	<head>
 		<meta chaset="UTF-8">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		 <link rel = "stylesheet" type="text/css" href="formatstyles.css"/>
-		 <link rel = "stylesheet" type="text/css" href="layoutstyles.css"/>
+		 <link rel = "stylesheet" type="text/css" href="stylesheet1.css"/>
+		 
 		 <script type="text/javascript">
 </script>
 
@@ -22,7 +22,8 @@ Melbourne Indie Films
 	 <div id = "header">
  		<ul>
   <li><a class="active" href="homepage.html">Home</a></li>
-  <li><a href="catalogue.html">Catalogue</a></li>
+  <li><a href="catalogue.html">Movies</a></li>
+  <li><a href="venues.html">Venues</a></li>
   <li><a href="about us.html">About Us</a></li>
   <li><a href="contact us.html">Contact Us</a></li>
   <li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
