--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@ body, html {
     background-image: url("images/cinema.jpg");
 
     /* Full height */
-    height: 100%; 
+    height: 75%; 
 
     /* Center and scale the image nicely */
     background-position: center;
@@ -36,7 +36,8 @@ body, html {
      
             <ul>
   <li><a class="active" href="homepage.html">Home</a></li>
-  <li><a href="catalogue.html">Catalogue</a></li>
+  <li><a href="catalogue.html">Movies</a></li>
+  <li><a href="venues.html">Venues</a></li>
   <li><a href="about us.html">About Us</a></li>
   <li><a href="contact us.html">Contact Us</a></li>
   <li style ="float:right"><a href="cart.html"><img src = "images/shoppingcart.png" alt = "shopping cart logo" style = "width:15px;height:15px; float:right"></a></li>
@@ -45,7 +46,14 @@ body, html {
 
                 </div>
 
-<div class="bg"></div>
+<div class="bg">
+
+  <div class = "movie-button">
+   <p>Check out our movies <br/ >
+   <a href ="catalogue.html">
+   <img border="0" alt="movie" src="images/movies/dyinglight.jpg" width="200" height="400"> </a>
+</p>
+</div>
 
  <h2><span>Melbourne Indie Films:<span class = 'spacer'></span><br /><span class = 'spacer'></span> Indie Films at Indie Venues</span>
 	 </h2>
