--- a/about us.html
+++ b/about us.html
@@ -9,6 +9,7 @@ Melbourne Indie Films
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		 <link rel = "stylesheet" type="text/css" href="formatstyles.css"/>
 		 <link rel = "stylesheet" type="text/css" href="layoutstyles.css"/>
+     <link rel = "stylesheet" type="text/css" href="stylesheet1.css"/>
 		 <script type="text/javascript">
 </script>
 
@@ -25,6 +26,7 @@ Melbourne Indie Films
   <li><a href="catalogue.html">Catalogue</a></li>
   <li><a href="about us.html">About Us</a></li>
   <li><a href="contact us.html">Contact Us</a></li>
+  <li style ="float:right"><a href="cart.html"><img src = "images/shoppingcart.png" alt = "shopping cart logo" style = "width:15px;height:15px; float:right"></a></li>
   <li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
 			</ul>
  </div>
