--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,6 @@
 		<script src="cart-script.js"></script><meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Basket</title>  
 	</head>
 
 	<body>
@@ -51,6 +50,7 @@
 							</div>
 							<div class="product-details">
 								<h1><strong><span class="item-quantity">4</span> x The God Mother </strong></h1>
+								<p> Venue: 
 							</div>
 						</div>
 						<div class="price">15.00</div>
@@ -62,77 +62,7 @@
 							<button>Remove</button>
 						</div>
 					</div>
-					<div class="basket-product">
-						<div class="item">
-							<div class="product-image">
-								<img src="images/movies/dyinglight.jpg" alt="Dying Light" class="movie_title">
-							</div>
-							<div class="product-details">
-								<h1><strong><span class="item-quantity">1</span> x Dying Light </strong></h1>
-							</div>
-						</div>
-						<div class="price">15.00</div>
-						<div class="quantity">
-							<input type="number" value="1" min="1" class="quantity-field">
-						</div>
-						<div class="subtotal">15.00</div>
-						<div class="remove">
-							<button>Remove</button>
-						</div>
-					</div>
-					<div class="basket-product">
-						<div class="item">
-							<div class="product-image">
-								<img src="images/movies/missionz.jpg" alt="Mission Z" class="movie_title">
-							</div>
-							<div class="product-details">
-								<h1><strong><span class="item-quantity">4</span> x Mission Z</strong></h1>
-							</div>
-						</div>
-						<div class="price">15.00</div>
-						<div class="quantity">
-							<input type="number" value="4" min="1" class="quantity-field">
-						</div>
-						<div class="subtotal">60.00</div>
-						<div class="remove">
-							<button>Remove</button>
-						</div>
-					</div>
-					<div class="basket-product">
-						<div class="item">
-							<div class="product-image">
-								<img src="images/movies/paws.jpg" alt="Paws" class="movie_title">
-							</div>
-							<div class="product-details">
-								<h1><strong><span class="item-quantity">4</span> x Paws</strong></h1>
-							</div>
-						</div>
-						<div class="price">15.00</div>
-						<div class="quantity">
-							<input type="number" value="4" min="1" class="quantity-field">
-						</div>
-						<div class="subtotal">60.00</div>
-						<div class="remove">
-							<button>Remove</button>
-						</div>
-					</div><div class="basket-product">
-					<div class="item">
-						<div class="product-image">
-							<img src="images/movies/theprotectors.jpg" alt="The Protectors" class="movie_title">
-						</div>
-						<div class="product-details">
-							<h1><strong><span class="item-quantity">4</span> x The Protectors</strong></h1>
-						</div>
-					</div>
-					<div class="price">15.00</div>
-					<div class="quantity">
-						<input type="number" value="4" min="1" class="quantity-field">
-					</div>
-					<div class="subtotal">60.00</div>
-					<div class="remove">
-						<button>Remove</button>
-					</div>
-				</div> 
+					
 			</div>
 			<aside>
 				<div class="summary">
@@ -158,7 +88,7 @@
 						<div class="total-value final-value" id="basket-total">130.00</div>
 					</div>
 					<div class="summary-checkout">
-						<button class="checkout-cta">Go to Secure Checkout</button>
+						<button class="checkout-cta"> <a href="checkout.html">Go to Secure Checkout</button>
 					</div>
 				</div>
 			</aside>
