homepage link buttons working

--- a/homepage.html
+++ b/homepage.html
@@ -48,6 +48,14 @@ body, html {
 
 <div class="bg">
 
+  <div class = venue-button>
+  <p> Can't decide on a movie? Choose a Venue <br/ >
+  <a href="venue.html">
+  <img border="0" alt="venue" src="images/venues/theatre.jpg" width="400" height = "400"> </a>
+  </p>
+  </div>
+
+
   <div class = "movie-button">
    <p>Check out our movies <br/ >
    <a href ="catalogue.html">
