contact us image

--- a/catalogue.html
+++ b/catalogue.html
@@ -3,6 +3,26 @@
 <head>
 	<title>Movie Catalogue - Melbourne Indie Films</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css" />
+	<style>
+	body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.bg {
+    /* The image used */
+    background-image: url("images/cinema.jpg");
+
+    /* Full height */
+    height: 75%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+</style>
+
 </head>
 
 <body>
