--- a/contact us.html
+++ b/contact us.html
@@ -3,7 +3,27 @@
 <head>
 	<title>Contact us - Melbourne Indie Films</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css" />
+	<style>
+	body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.bg {
+    /* The image used */
+    background-image: url("images/cinema.jpg");
+
+    /* Full height */
+    height: 75%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+</style>
 </head>
+
 
 <body>
 	<div id="banner">
@@ -20,7 +40,7 @@
 			<li style="float:right"><a class="active" href="login.html">Login/Register</a></li>
 		</ul>
 	</div>
-
+<div class="bg">
 <div class="container">
   <div class="row header">
     <h1>CONTACT US</h1>
