--- a/about us.html
+++ b/about us.html
@@ -45,10 +45,14 @@ Melbourne Indie Films
   <p> We are here to help you explore indie films at extraordinary venues around you that you may not even be aware of ! </p>
 
 <div id ="footer">
-    <ul>
-      <li><a href="http://www.facebook.com">Facebook</a></li>
-      <li><a href="http://www.instagram.com">Instagram</a></li>
-    </ul>
+  <ul>
+ <li><a href="http://www.facebook.com">Facebook</a></li>
+
+ <li><a href="http://www.instagram.com">Instagram</a></li>
+
+ <li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
+  
+  </ul>
   </div>
 </div>
 
