--- a/checkout.html
+++ b/checkout.html
@@ -49,7 +49,7 @@
       <input type="text" class="checkout-input checkout-cvc" placeholder="CVC">
     </p>
     <p>
-      <input type="submit" value="Purchase" class="checkout-btn">
+      <input type="submit" value="Purchase" class="checkout-btn" href="thankyou.html">
     </p>
   </form>
   </body>
