--- a/login.html
+++ b/login.html
@@ -74,6 +74,16 @@
 					</form>
 				</div>
 			</div>
+			<div id ="footer">
+ 	<ul>
+ <li><a href="http://www.facebook.com">Facebook</a></li>
+
+ <li><a href="http://www.instagram.com">Instagram</a></li>
+
+ <li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
+  
+  </ul>
+ 	</div>
 		</body>
 
 <!--Reference: https://codepen.io/colorlib/pen/rxddKy?editors=1100 !-->
