--- a/contact us.html
+++ b/contact us.html
@@ -83,15 +83,20 @@
     </form>  
   </div>
 </div>
-<div id ="footer">
-		<ul>
-			<li><a href="http://www.facebook.com">Facebook</a></li>
-			<li><a href="http://www.instagram.com">Instagram</a></li>
-		</ul>
-	</div>
-
-
+</div>
 </body>
+<div id ="footer">
+ 	<ul>
+ <li><a href="http://www.facebook.com">Facebook</a></li>
+
+ <li><a href="http://www.instagram.com">Instagram</a></li>
+
+ <li style = "float:right"> Copyright 2017 Melbourne Indie Films Australia. All Rights Reserved. </li>
+  
+  </ul>
+ 	</div>
+
+
 
 </html>
 	
