--- a/checkout.html
+++ b/checkout.html
@@ -98,3 +98,5 @@
     <script src="checkout-script.js"></script>
 </body>
 </html>
+
+<!-- Reference: http://tutorialzine.com/2016/11/simple-credit-card-validation-form/ -->
