updated movie info page

--- a/thegodmother.html
+++ b/thegodmother.html
@@ -38,7 +38,16 @@
 				</select>
 				<input type="submit" value="Add to Cart">
 				</form>
+				<br>
+				<p>Tickets Available: 50</p>
 		</div>
+		<tr>
+			<td><p>Synopsis: <br />
+			When the aging head of a famous crime family decides to transfer her position to one of her subalterns, <br /> 
+			a series of unfortunate events start happening to the family, and a war begins <br /> 
+			between all the well-known families leading to insolence, deportation, murder and revenge, <br /> 
+			and ends with the favorable successor being finally chosen.</p></td>
+		</tr>
 	</div>
 	
 	<div id ="footer">
